@@ -1,12 +1,20 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.423 2011-01-17 07:21:49 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.424 2011-02-22 03:28:07 zender Exp $ -*-text-*-
 
 The netCDF operators NCO version 4.0.7 are ready. 
 
 http://nco.sf.net (Homepage)
 http://dust.ess.uci.edu/nco (Homepage "mirror")
 
-This release fixes one important and known bug,
-http://nco.sf.net#bug_hyp_dgn.
+This release does one thing only, it fixes an important bug:
+
+http://nco.sf.net#bug_hyp_dgn
+
+Now NCO returns correct hyperslabs for hyperslabs or bounding boxes,
+specified with -d or -X, respectively, that do not include at least
+one point. Formerly, NCO could erroneously return all data on such
+hyperslabs. Thanks to Jeff Daily for reporting this. Although most
+users do not specify empty hyperslabs, we urge all users to upgrade to
+NCO 4.0.7+ just to be safe. 
 
 Also worth mentioning again is that the latest Debian (Sid) and Ubuntu
 (Maverick) NCO packages support DAP, netCDF4, and UDUnits2.  
@@ -14,40 +22,22 @@ Also worth mentioning again is that the latest Debian (Sid) and Ubuntu
 http://nco.sf.net#debian
 http://nco.sf.net#ubuntu
 
-Work on NCO 4.0.7 is underway, focused on issued described in the new  
+Work on NCO 4.0.8 is underway, focused on issues described in the 
 KNOWN BUGS NOT YET FIXED section below.
 
 Enjoy,
 Charlie
 
-"New stuff" in 4.0.7 summary (full details always in ChangeLog):
+Other "New stuff" in 4.0.7 summary (full details always in ChangeLog):
 
-A. Hi
-
-A. MPI executables mpncpdq, mpncra, mpncwa have been updated to
-   the same feature set as the normal, non-MPI executables.
-   Now all MPI executables are feature-equivalent to serial codes. fxm
+A. None
 
 KNOWN BUGS NOT YET FIXED:
 
-   This is a new section of the ANNOUNCE file intended to make clear
-   the existence and severity of known, and not yet fixed, problems.
+   This section of the ANNOUNCE file is intended to make clear the
+   existence and severity of known, and not yet fixed, problems. 
 
 A. NOT YET FIXED
-   Return correct hyperslabs returned for bounding boxes specified with
-   -d or -X that do not include at least one point. Instead of
-   returning no data, sometimes hyperslabs would return all data. 
-   Thanks to Jeff Daily for reporting this. 
-   This problem is serious and users should upgrade once fix arrives:
-   http://nco.sf.net#bug_hyp_dgn
-
-   Demonstration:
-   ncks -O -v lat -d lat,20.,20.001 ~/nco/data/in.nc ~/foo.nc # broken---returns all values but should return none
-
-   20110114: Verified problem still exists
-   Bug report: TODO nco1007.
-
-B. NOT YET FIXED
    Correctly handle stride argument when accessing some files through some DAP servers.  
    DAP non-transparency: Works locally, fails through DAP server.
 
@@ -58,7 +48,7 @@ B. NOT YET FIXED
    20110114: Verified problem still exists on NOAA DAP server
    Bug report not filed: Suggest users upgrade DAP servers?
 
-C. NOT YET FIXED
+B. NOT YET FIXED
    Correctly handle NC_CHAR coordinates (like fl_dmn) on DAP files.
    DAP non-transparency: Works locally, fails through DAP server.
 
@@ -68,7 +58,7 @@ C. NOT YET FIXED
    20110114: Fixed in Unidata DAP server? Need confirmation works elsewhere
    Bug report filed: netCDF #JZN-949284 NC_CHAR coordinate via DAP
 
-D. NOT YET FIXED
+C. NOT YET FIXED
    Correctly average NC_CHAR coordinates from DAP files.
    DAP non-transparency: Works locally, fails through DAP server.
 
@@ -79,7 +69,7 @@ D. NOT YET FIXED
    20110114: Verified problem still exists
    Bug report filed: netCDF #JZN-949284 NC_CHAR coordinate via DAP
 
-E. NOT YET FIXED
+D. NOT YET FIXED
    Correctly read netCDF4 input over DAP, write netCDF4 output, then read resulting file.
    Replacing netCDF4 with netCDF3 in either location of preceding sentence leads to success.
    DAP non-transparency: Works locally, fails through DAP server.
