@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.636 2011-02-22 00:01:09 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.637 2011-02-22 03:28:07 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -1422,14 +1422,14 @@ Problems with older releases:
 <a name="bug_hyp_dgn"></a>
 <li><i>Degenerate hyperslabbing bug:</i>
 Versions ???&mdash;4.0.6 could return incorrect hyperslabs when
-a user-specified bounding box did not include at least one point.  
+user-specified hyperslabs did not include at least one point.  
 In such cases, instead of returning no data, hyperslabs could return all data. 
 To determine whether your NCO is affected by this bug, run these commands:
 <tt>ncks -O -v lat -d lat,20.,20.001 ~/nco/data/in.nc ~/foo.nc;ncks -H ~/foo.nc</tt>
 If the returned hyperslab contains any data, then your NCO is buggy
 (because that hyperslab should be empty).
 This can lead to incorrect answers for hyperslabs that should be empty.
-Analogous problems would occur with empty auxiliary coordinate hyperslabs.
+Analogous problems would occur with empty auxiliary coordinate bounding boxes.
 Although most users do not specify empty hyperslabs, we urge all users
 to upgrade to NCO 4.0.7+ just to be safe.
 </li>
