@@ -6,6 +6,10 @@
 	cd ~/nco;cvs commit -m "Preparing nco-4.0.7 release"
 	cvs tag -c nco-4_0_7;cvs tag -c nco-4_0_7-1
 
+	* Still need to update MPI executables mpncpdq, mpncra, mpncwa
+	to the same feature set as the normal, non-MPI executables so that
+	all MPI executables are feature-equivalent to serial codes.
+
 	* Mark nco1007 as fixed and opening nco1010 specifically for degenerate auxiliary hyperslabs
 
 	* Yet more nco_aux.c clean-up
